Fix: Removed overflow from slideshow
Overflow hidden property was hiding the slideshow next and previous buttons.

--- a/css/index.css
+++ b/css/index.css
@@ -312,7 +312,6 @@ section {
   height: 48%;
   margin-bottom: 10px;
   border-radius: 10px;
-  overflow: hidden;
   background-color: #efefef;
 }
 
